--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+body {
+    @apply bg-[#FAFAFA];
+}
+
+.shadow-btn {
+    @apply shadow-[0_2px_4px_rgba(0,0,0,0.25)];
+}
+
+.hover-btn{
+    @apply hover:bg-white hover:text-black hover:rounded-md hover:shadow-[0_2px_4px_rgba(0,0,0,0.25)] hover:duration-200 hover:translate-x-1 hover:cursor-pointer;
+}
