--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ body {
 .hover-btn{
     @apply hover:bg-white hover:text-black hover:rounded-md hover:shadow-[0_2px_4px_rgba(0,0,0,0.25)] hover:duration-300 hover:cursor-pointer;
 }
+
+.login-button {
+    @apply hover:cursor-pointer uppercase bg-[#b60f16] text-white w-[100%] py-3 mt-2 rounded font-bold
+}
+
+.login-input {
+    @apply placeholder:font-medium w-[100%] p-3 px-4 m-1 rounded;
+    border: 1.5px solid #e3e3e3;
+}
