--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,7 @@ body {
     @apply placeholder:font-medium w-[100%] p-3 px-4 m-1 rounded;
     border: 1.5px solid #e3e3e3;
 }
+
+.btn {
+    @apply shadow-[0_0_1.5px_#666] px-4 py-2 rounded hover:shadow-[0_0_2px_#555] hover:cursor-pointer hover:scale-[1.02] bg-white
+}
