--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 }
 
 .shadow-btn {
-    @apply shadow-[0_2px_4px_rgba(0,0,0,0.25)];
+    @apply shadow-[0_2px_4px_rgba(0,0,0,0.125)] cursor-pointer;
 }
 
 .hover-btn{
