--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 :root {
     --fill-color: #dcf1ca;
+    --process-color: #fefe5fa0;
 }
 
 body {
@@ -30,5 +31,5 @@ body {
 }
 
 .btn {
-    @apply shadow-[0_0_1.5px_#666] px-4 py-2 rounded hover:shadow-[0_0_2px_#555] hover:cursor-pointer hover:scale-[1.02] bg-white
+    @apply shadow-[0_0_1.5px_#666] rounded hover:duration-200 hover:shadow-[0_0_2px_#555] hover:cursor-pointer hover:scale-[1.02] bg-white
 }
